Camera-ready manuscripts uploaded

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                         </tr>
                         <tr>
                           <th scope="row">2:30 - 3:00 PM</th>
-                          <td>"Amplification of Errors by Encryption"<br> 
+                          <td>"Amplification of Errors by Encryption" 
 							  <a href="assets/pdfs/DISCC_2023_paper_3.pdf" rel="nofollow" target="_blank">(paper)</a><br>
 							  Evgeny Manzhosov and Simha Sethumadhavan <em>(Columbia University)</em></td>
                         </tr>
